<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player1_legende"
        android:id="@+id/player1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:textColor="#dc4646" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player2_legende"
        android:id="@+id/player2"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/player1_input"
        android:layout_alignStart="@+id/player1"
        android:textStyle="bold"
        android:textColor="#dc4646" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready_btn"
        android:id="@+id/ready_btn"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/player2_input"
        android:layout_centerHorizontal="true"
        android:background="@color/launch"
        android:onClick="launchGame"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player2_input"
        android:inputType="text"
        android:layout_below="@+id/player2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:width="150dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player1_input"
        android:inputType="text"
        android:layout_below="@+id/player1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:width="150dp"
        android:textAlignment="center" />
</RelativeLayout>