<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableLayout
        android:layout_marginTop="30dp"
        android:layout_width="316dp"
        android:layout_height="516dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:stretchColumns="2"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lineBackground">

            <Button
                android:id="@+id/btn11"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp" />

            <Button
                android:id="@+id/btn12"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btn13"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lineBackground">

            <Button
                android:id="@+id/btn21"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btn22"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>

            <Button
                android:id="@+id/btn23"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lineBackground">

            <Button
                android:id="@+id/btn31"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/btn32"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/btn33"
                android:background="@color/launch"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Player1_name"
                android:text="@string/pl1"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/Player2_name"
                android:text="@string/pl2"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:layout_column="2" />
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgpl1"
                android:src="@drawable/o"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imgpl2"
                android:src="@drawable/x"
                android:layout_column="2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/scoreNul"
                android:id="@+id/scorepl1"
                android:gravity="center_vertical"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/scoreNul"
                android:id="@+id/scorepl2"
                android:layout_column="2"
                android:gravity="center_vertical"
                android:textAlignment="center"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>